--- a/static/style/slideshow.css
+++ b/static/style/slideshow.css
@@ -19,7 +19,7 @@
 }
 
 .mySlides > img {
-  min-height: 30em;
+  min-height: 33.2em;
   min-width: 34em;
 }
 
